kyy-k8s-config/src/app/backend/go-sitemap/go-sitemap-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: go-sitemap
  name: go-sitemap
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: go-sitemap
    spec:
      containers:
        - env:
            - name: DATABASE_HOST
              value: rm-2zeb1f93086857hv0.mysql.rds.aliyuncs.com
            - name: DATABASE_NAME
              value: kaoyaya_yuncms
            - name: DATABASE_PASSWORD
              value: 4PYmsab4Ukyh
            - name: DATABASE_USER
              value: kyy_yuncms
            - name: MASTER_DB_HOST
              value: rm-2ze8m2daqb051wp49.mysql.rds.aliyuncs.com
            - name: MASTER_DB_NAME
              value: sq_kaoyaya
            - name: MASTER_DB_PASSWORD
              value: tdHRdT7V2o4d
            - name: MASTER_DB_USER
              value: kyy_master
            - name: PORT
              value: "80"
            - name: QUESTION_CASH
              value: "true"
            - name: QUESTION_DB_HOST
              value: rm-2ze1284oau0bzbz97.mysql.rds.aliyuncs.com
            - name: QUESTION_DB_NAME
              value: question
            - name: QUESTION_DB_PASSWORD
              value: Nd1Gt6IgddAu
            - name: QUESTION_DB_USER
              value: kyy_question
            - name: REDIS_AUTH
              value: 9V3zrtA338ULq6N7s2
            - name: REDIS_HOST
              value: r-2ze6269f42e1f8c4.redis.rds.aliyuncs.com:6379
            - name: RUN_MODE
              value: production
          image: registry.cn-beijing.aliyuncs.com/kaoyaya-micro/sitemap
          name: go-sitemap
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
